<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">News App - Brasil Notícias</string>
    <string name="title_activity_sign_up">Cadastro</string>
    <string name="tab_text_1">PESSOAL</string>
    <string name="tab_text_2">ACESSO</string>
    <string name="tab_text_3">TERMOS</string>

    <string name="label_terms_and_conditions">Concordo com os termos e condições de uso.</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="criar_conta">Criar conta ➙</string>
    <string name="politicas_privacidade">Políticas de privacidade</string>
    <string name="informe_imagem_perfil">Toque para fornecer sua foto de perfil.</string>
    <string name="nome_completo">Nome completo</string>
    <string name="profissao">Profissão</string>
    <string name="enviar">Enviar</string>

    <string name="terms_and_conditions">
        É um fato conhecido de todos que um leitor se distrairá com o conteúdo
        de texto legível de uma página quando estiver examinando sua diagramação.
        \n\n

        A vantagem de usar Lorem Ipsum é que ele tem uma distribuição normal de
        letras, ao contrário de "Conteúdo aqui, conteúdo aqui", fazendo com que
        ele tenha uma aparência similar a de um texto legível.
        \n\n

        Muitos softwares de publicação e editores de páginas na internet agora usam
        Lorem Ipsum como texto-modelo padrão, e uma rápida busca por \'lorem ipsum\'
        mostra vários websites ainda em sua fase de construção.
        \n\n

        Várias versões novas surgiram ao longo dos anos, eventualmente por acidente,
        e às vezes de propósito (injetando humor, e coisas do gênero).
        \n\n

        Existem muitas variações disponíveis de passagens de Lorem Ipsum, mas a maioria
        sofreu algum tipo de alteração, seja por inserção de passagens com humor, ou
        palavras aleatórias que não parecem nem um pouco convincentes.
        \n\n

        Se você pretende usar uma passagem de Lorem Ipsum, precisa ter certeza de
        que não há algo embaraçoso escrito escondido no meio do texto. Todos os
        geradores de Lorem Ipsum na internet tendem a repetir pedaços predefinidos
        conforme necessário, fazendo deste o primeiro gerador de Lorem Ipsum autêntico
        da internet.
        \n\n

        Ele usa um dicionário com mais de 200 palavras em Latim combinado com um punhado
        de modelos de estrutura de frases para gerar um Lorem Ipsum com aparência razoável,
        livre de repetições, inserções de humor, palavras não características, etc.
    </string>
</resources>
